	  error if creation or writing fails.  (You're still on your
	  own for directory creation and permissions if you take the
	  key on standard output and redirect it to a file.)

        - The log command was missing '--depth' and '--exclude' options used to
          restrict revisions printed to those touching specific paths. Log now
          allows these options and uses them properly.

        - The update command previously did not clear execute permissions from
          files that had their associated 'mtn:execute' attribute cleared.

        - Several minor problems with workspace attributes have been fixed.
          Earlier versions of monotone would reset attributes such as
          mtn:execute on all files when any workspace modifying command was
          executed. Applying attribute changes to workspace files is now done
          much more selectively in the same manner that content and name changes
          are applied.

        New features

        - The `mtn_automate' lua function now correctly parses and sets
          options for executed automate commands.

        - Additional '--full' option for 'mtn db info' to display some
          statistic analysis of the date certs in the database.

	- Command line options in the EDITOR and/or VISUAL environment
	  variables are honored; for instance, EDITOR="emacs -nw"
	  works now.  (Debian bug #320565.)

        - Additional '--revision' option for 'mtn log' allows logging of
          selected sets of revisions.

        - Additional 'u:' and 'm:' selector types for selecting the revision the
          workspace was last updated from and revisions matching specified
          message globs in changelog and comment certs.

        - A monotone database may be exported in the git fast-import format
          using the git_export command. The output from this command may be
          piped into git fast-import or other tools supporting this format.

        Internal
